<resources>
    <string name="app_name">Adeptforms</string>
    <string name="tvLoading">Loading…</string>
    <string name="tvCopyright">Copyright \u00A9 2021 \n Adeptforms version X</string>
    <string name="tvCopyright2">Copyright \u00A9 2021 | Version X</string>
    <string name="tvWelcomeBack">Welcome Back!</string>
    <string name="tvSignUpFirst">Sign Up First!</string>
    <string name="tvResetPassword">Reset Password!</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="tvSignIn">Sign In</string>
    <string name="tvSignUp">Sign Up</string>
    <string name="tvSignOut">Sign Out</string>
    <string name="tvForgotPasswords">Forgot Passwords</string>
    <string name="tvFullName">Full Name</string>
    <string name="tvUsername">Username</string>
    <string name="tvCompanyName">Company Name</string>
    <string name="tvJobPosition">Job Position</string>
    <string name="tvForgotPasswordInfo">Fill in your registered email in AdeptForms to create a new password</string>
    <string name="tvLite">Lite</string>
    <string name="tvHelpYou">How can we help you?</string>
    <string name="tvConnectToTeam">Connect to our available support team</string>
    <string name="tvAppIntegrations">App Integrations</string>
    <string name="tvHRMLabs">HRMLabs</string>
    <string name="tvHRMLabsDesc">Adeptforms pulls your employment data</string>
    <string name="tvProcessing">Processing…</string>
    <string name="tvProfilePicture">Profile Picture</string>
    <string name="tvHello">Hello, welcome</string>
    <string name="tvSearchEverything">Search everything here…</string>
    <string name="tvLatestUpdate">Latest Update</string>
    <string name="tvNumber1">1</string>
    <string name="tvName">Name</string>
    <string name="tvType">Type</string>
    <string name="tvStatus">Status</string>
    <string name="tvClockingReports">Clocking Reports</string>
    <string name="tvTodayJobList">Today\'s Job List</string>
    <string name="tvJobsName">Jobs Name:</string>
    <string name="tvClient">Client:</string>
    <string name="tvAreaAddress">Area Address:</string>
    <string name="tvClockInTime">Clock In Time:</string>
    <string name="tvClockOutTime">Clock Out Time:</string>

    // Menu
    <string name="icHome">Home</string>
    <string name="icDocs">Docs</string>
    <string name="icScan">Scan</string>
    <string name="icSettings">Settings</string>
    <string name="icProfile">Profile</string>

    // Button
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="btnConnected">Connected</string>
    <string name="btnSelectImage">Select Image</string>
    <string name="btnUploadImage">Upload Image</string>
    <string name="btnReportProblem">Report a Problem</string>
    <string name="btnMarkComplete">Mark as Complete</string>

</resources>