<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgLoginBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/logo_login"
        android:layout_marginBottom="170dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imgAdeptForms"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_adeptforms"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/etEmail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvResetPassword"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@id/imgAdeptForms"
        app:layout_constraintStart_toStartOf="@id/etEmail"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorYellow1"
        android:layout_marginTop="330dp"
        android:layout_marginHorizontal="36dp"
        android:hint="@string/tvEmail"
        android:textSize="15sp"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:autofillHints="name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="36dp"
        android:text="@string/btnResetPassword"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/background_corner"
        style="?android:attr/borderlessButtonStyle"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="3dp"
        android:text="@string/tvSignIn"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnResetPassword"
        app:layout_constraintStart_toStartOf="@id/btnResetPassword"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="3dp"
        android:text="@string/tvSignUp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/tvSignIn"
        app:layout_constraintEnd_toEndOf="@id/btnResetPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>