<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    tools:context=".ui.fragment.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:layout_margin="12dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="3dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_back_ios"
            app:layout_constraintTop_toTopOf="@id/cardBack"
            app:layout_constraintBottom_toBottomOf="@id/cardBack"
            app:layout_constraintEnd_toStartOf="@id/imgSegment"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icSettings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/cardBack"
        app:layout_constraintEnd_toEndOf="@id/imgDarkMode"
        app:layout_constraintTop_toTopOf="@id/cardBack"
        app:layout_constraintBottom_toBottomOf="@id/cardBack"/>

    <ImageView
        android:id="@+id/imgDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@null"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_outline_dark_mode"
        app:layout_constraintTop_toTopOf="@id/cardBack"
        app:layout_constraintBottom_toBottomOf="@id/cardBack"
        app:layout_constraintEnd_toStartOf="@id/imgSegment"/>

    <ImageView
        android:id="@+id/imgSegment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@null"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_outline_segment"
        app:layout_constraintTop_toTopOf="@id/cardBack"
        app:layout_constraintBottom_toBottomOf="@id/cardBack"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAdeptForms"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:layout_marginTop="45dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/cardBack"
        app:layout_constraintStart_toEndOf="@id/cardBack"/>

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCopyright2"
        app:layout_constraintTop_toBottomOf="@id/tvAdeptForms"
        app:layout_constraintStart_toStartOf="@id/tvAdeptForms"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignOut"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/colorYellow3"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="@id/tvAdeptForms"
        app:layout_constraintBottom_toBottomOf="@id/tvCopyright"
        app:layout_constraintEnd_toEndOf="@id/imgSegment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_sign_out"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSignOut"
                app:layout_constraintTop_toBottomOf="@id/imgSignOut"
                app:layout_constraintStart_toStartOf="@id/imgSignOut"
                app:layout_constraintEnd_toEndOf="@id/imgSignOut"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/viewAdeptFormsLite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:background="@drawable/adeptforms_lite"
        app:layout_constraintTop_toBottomOf="@id/cardSignOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imgAdeptFormsLite"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_adeptforms"
        app:layout_constraintStart_toEndOf="@id/cardBack"
        app:layout_constraintTop_toTopOf="@id/viewAdeptFormsLite"
        app:layout_constraintBottom_toBottomOf="@id/viewAdeptFormsLite"/>

    <TextView
        android:id="@+id/tvLite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/tvLite"
        app:layout_constraintStart_toEndOf="@id/imgAdeptFormsLite"
        app:layout_constraintTop_toTopOf="@id/imgAdeptFormsLite"
        app:layout_constraintBottom_toBottomOf="@id/imgAdeptFormsLite"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/cardSignOut"
        app:layout_constraintTop_toTopOf="@id/imgAdeptFormsLite"
        app:layout_constraintBottom_toBottomOf="@id/imgAdeptFormsLite"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="45dp"
        tools:listitem="@layout/item_settings"
        tools:itemCount="5"
        app:layout_constraintTop_toBottomOf="@id/viewAdeptFormsLite"
        app:layout_constraintStart_toStartOf="@id/imgAdeptFormsLite"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>